...
            <point key="canvasLocation" x="-1926" y="366"/>
        </scene>
        <!--All EAs-->
        <scene sceneID="7AU-wn-ZF6">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eei-7c-UeF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="All EAs" image="Wallet" id="HW4-my-mOI"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="aWS-Rn-lcd">
                        <rect key="frame" x="0.0" y="20" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" name="Menu Color"/>
                    </navigationBar>
...
            <point key="canvasLocation" x="2926" y="-682"/>
        </scene>
        <!--My EAs-->
        <scene sceneID="mkf-fL-aJq">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BHN-Cz-avc" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My EAs" image="Cog" id="LdU-O9-kfK"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Qpw-90-8qj">
                        <rect key="frame" x="0.0" y="20" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" name="Menu Color"/>
                    </navigationBar>
...
            <point key="canvasLocation" x="450" y="716"/>
        </scene>
        <!--Me-->
        <scene sceneID="8di-Lo-q6T">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aXX-tM-b1I" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Me" image="User" id="BkV-wp-EId"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="I14-Y0-Jm1">
                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" name="Menu Color"/>
                    </navigationBar>
...
